Fix text visibility

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -148,9 +148,13 @@ a.impressum {
 	}
 }
 
+.showOnHoverParent {
+	margin-top: 40px;
+}
+
 .showOnHover {
 	color: #333333;
-	margin-top: 40px;
+	outline: 1px solid transparent;
 
 	-webkit-transition: all 300ms linear;
 	-moz-transition: all 300ms linear;
@@ -158,13 +162,18 @@ a.impressum {
 	-o-transition: all 300ms linear;
 	transition: all 300ms linear;
 
-	:hover {
-		color: white;
-
-		-webkit-transition: all 300ms linear;
-		-moz-transition: all 300ms linear;
-		-ms-transition: all 300ms linear;
-		-o-transition: all 300ms linear;
-		transition: all 300ms linear;
+	p {
+		visibility: hidden;
 	}
+}
+
+.showOnHover:hover p {
+	visibility: visible;
+	color: white;
+
+	-webkit-transition: all 300ms linear;
+	-moz-transition: all 300ms linear;
+	-ms-transition: all 300ms linear;
+	-o-transition: all 300ms linear;
+	transition: all 300ms linear;
 }
